# UserAuth

./: .gitignore  README.md
api/: Cargo.toml  README.md
api/src/: auth.rs  jwt.rs  lib.rs  main.rs  utils.rs
frontend/: README.md  package.json
frontend/src/: api.ts  config.ts  theme.ts
frontend/src/pages/: _app.tsx  index.tsx  login.tsx  register.tsx  success.tsx
frontend/src/styles/: globals.css
