[package]
name = "user_auth_temp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json"] }
sqlite = "0.33.0"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.2.0"
rocket_cors = "0.6.0"
chrono = "0.4.34"
